--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "themes/hugo-whisper-theme"]
 	path = themes/hugo-book
-	url = https://github.com/alex-shpak/hugo-book
-[submodule "nmnokr.github.io"]
-	path = nmnokr.github.io
-	url = git@github.com:nmnokr/nmnokr.github.io.git
+	url = https://github.com/alex-shpak/hugo-book.git
