--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = 'http://example.org/'
+baseURL = "nmnokr.github.io/"
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "hugo-book"
+publishDir = "nmnokr.github.io"
